arm/azure-starter.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vmSize": {
            "type": "string"
        },
        "adminUserName": {
            "type": "string"
        },
        "sshKeyData": {
            "type": "string"
        },
        "storageAccount": {
            "type": "string"
        },
        "imageBlob": {
            "type": "string"
        },
        "imageContainer": {
            "type": "string"
        },
        "vhdContainer": {
            "type": "string"
        }
    },
    "variables": {
        "blobEndpoint": "[concat('https://', parameters('storageAccount'),'.blob.core.windows.net/')]",
        "image-uri": "[concat(variables('blobEndpoint'), parameters('imageContainer'), '/', parameters('imageBlob'))]",
        "vhd-uri": "[concat(variables('blobEndpoint'), parameters('vhdContainer'), '/azs-vm-1-osdisk.vhd')]",
        "sshKeyPath": "[concat('/home/',parameters('adminUserName'),'/.ssh/authorized_keys')]"
    },
    "resources": [
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "azs-pip-1",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[uniquestring(concat(subscription().subscriptionId, resourceGroup().id))]"
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "azs-backend-nsg",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "mosh",
                        "properties": {
                            "description": "Allow MOSH",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "60000-61000",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "azs-vnet",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'azs-backend-nsg')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.168.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "192.168.0.0/24"
                        }
                    },
                    {
                        "name": "azs-backend-subnet",
                        "properties": {
                            "addressPrefix": "192.168.255.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'azs-backend-nsg')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "azs-nic-1",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "Microsoft.Network/publicIPAddresses/azs-pip-1",
                "Microsoft.Network/virtualNetworks/azs-vnet"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'azs-pip-1')]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', 'azs-vnet'), '/subnets/azs-backend-subnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "azs-vm-1",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "Microsoft.Network/networkInterfaces/azs-nic-1"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "azsvm",
                    "adminUsername": "[parameters('adminUserName')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": "true",
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "[variables('sshKeyPath')]",
                                    "keyData": "[parameters('sshKeyData')]"
                                }
                            ]
                        }
                    }
                },
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "name": "azs-vm-osdisk",
                        "createOption": "FromImage",
                        "image": {
                            "uri": "[variables('image-uri')]"
                        },
                        "vhd": {
                            "uri": "[variables('vhd-uri')]"
                        },
                        "caching": "ReadWrite"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', 'azs-nic-1')]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
